--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyCm94P19Qew1DZtkVY56MzEo5ePQVlwnOk</string>
+	<string>AIzaSyCFEp9q_4ScFzEOKrbxfe4UmbtwqunfPbA</string>
 	<key>GCM_SENDER_ID</key>
-	<string>931523574925</string>
+	<string>743411628327</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.coredisc.CoreDisc</string>
+	<string>umc.coredisc.CoreDisc</string>
 	<key>PROJECT_ID</key>
-	<string>coredisc-26a58</string>
+	<string>coredisc-f93ff</string>
 	<key>STORAGE_BUCKET</key>
-	<string>coredisc-26a58.firebasestorage.app</string>
+	<string>coredisc-f93ff.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:931523574925:ios:b8658a4435da1201de36c4</string>
+	<string>1:743411628327:ios:77e22d420212173aa8d102</string>
 </dict>
 </plist>
