--- a/CoreDisc/Info.plist
+++ b/CoreDisc/Info.plist
@@ -43,5 +43,9 @@
 		<string>PrimeformProDemo-SemiBold.otf</string>
 		<string>PrimeformProDemo-Thin.otf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
