--- a/CoreDisc/Info.plist
+++ b/CoreDisc/Info.plist
@@ -14,6 +14,14 @@
 				<string>kakao${KAKAO_NATIVE_APP_KEY}</string>
 			</array>
 		</dict>
+        <dict>
+          <key>CFBundleURLName</key>
+          <string>naver</string>
+          <key>CFBundleURLSchemes</key>
+          <array>
+              <string>${NAVER_URL_SCHEME}</string>
+          </array>
+        </dict>
 	</array>
 	<key>KAKAO_NATIVE_APP_KEY</key>
 	<string>$(KAKAO_NATIVE_APP_KEY)</string>
@@ -21,6 +29,8 @@
 	<array>
 		<string>kakaolink</string>
 		<string>kakaokompassauth</string>
+        <string>naversearchapp</string>
+        <string>naversearchthirdlogin</string>
 	</array>
 	<key>UIAppFonts</key>
 	<array>
@@ -47,5 +57,13 @@
 	<array>
 		<string>remote-notification</string>
 	</array>
+    <key>NidAppName</key>
+    <string>CoreDisc</string>
+    <key>NidClientID</key>
+    <string>${NAVER_CLIENT_ID}</string>
+    <key>NidClientSecret</key>
+    <string>${NAVER_CLIENT_SECRET}</string>
+    <key>NidUrlScheme</key>
+    <string>${NAVER_URL_SCHEME}</string>
 </dict>
 </plist>
